--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -30,6 +30,10 @@ div#tsparticles {
     z-index: 9;
     position: relative;
 }
+button.share-button1 {
+    font-size: 22px;
+    margin-top: 12px;
+}
 
 @media only screen and (max-width:480px) {
     .banner-content {
