--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -7,13 +7,18 @@
     position: relative;
     color:#fff;
     margin-top:70px;
+    padding:100px 0;
 }
 .banner-image {
-    width: 100%;
-    text-align: center;
+    width: 85%;
+    border: 15px solid #fff;
+    border-image: linear-gradient(#FF5733, #272DFA,#fff) 100;
+}
+.banner-image img {
+    width:100%;
 }
 .banner-content h1 {
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 700;
     text-transform: uppercase;
 }
@@ -30,11 +35,17 @@ div#tsparticles {
     z-index: 9;
     position: relative;
 }
-button.share-button1 {
+.share-button1 {
     font-size: 22px;
     margin-top: 12px;
+    background: linear-gradient(to right, #FF5733,#272DFA);
+    border:none;
+    transition: .5s;
+    color:#fff;
 }
-
+button.share-button1:hover {
+    background: linear-gradient(to right,#272DFA, #FF5732);
+}
 @media only screen and (max-width:480px) {
     .banner-content {
         padding-bottom: 20px;
