--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,3 +1,6 @@
+.about-area {
+    background-color: #f7f7f7;
+}
 .hasan {
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
@@ -6,4 +9,12 @@
 }
 .about-image img {
     width:100%;
+}
+
+/* // mobile device  */
+
+@media only screen and (max-width:480px) {
+    .about-image {
+        margin-top: 30px;
+    }
 }
