some modify and changes

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -6,8 +6,8 @@
     background-repeat: no-repeat;
     position: relative;
     color:#fff;
-    margin-top:70px;
-    padding:100px 0;
+    padding:150px 0;
+    height: 100vh;
 }
 .banner-image {
     width: 85%;
