--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,10 @@
 .about-area {
-    background-color: #f7f7f7;
+    background-image: url('../../images/banner3.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:#fff;
 }
 .hasan {
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
@@ -8,9 +13,9 @@
     width: 90%;
 }
 .about-image img {
-    width:100%;
+    width: 100%;
+    height: 380px;
 }
-
 /* // mobile device  */
 
 @media only screen and (max-width:480px) {
