--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,9 @@
 .footer {
-    background: #212529;
+    background-image: url('../../images/banner3.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:#fff;
     padding: 30px 0;
-    color: #fff;
 }
