--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,6 +9,9 @@
 .hasan {
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
+div#about p {
+    font-size: 18px;
+}
 .about-image {
     width: 90%;
 }
