--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -47,3 +47,55 @@
     text-transform: uppercase;
     font-weight: 700;
 }
+
+
+.menu-container {
+	height: 100vh;
+	width: 100%;
+	background: #000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	opacity: .9;
+	display: none;
+	transition: .5s;
+}
+
+.menu-container ul {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.menu-container ul li a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 28px;
+	text-transform: uppercase;
+	transition: .3s;
+	font-weight: 600;
+}
+.menu-container ul li:hover a {
+	font-size: 30px;
+	color: tomato;
+}
+.menu-container ul li {
+	margin-bottom: 6px;
+}
+.close-button i {
+	color: #fff;
+	font-size: 40px;
+	position: absolute;
+	top: 35px;
+	right: 12%;
+	cursor: pointer;
+	z-index: 9999;
+}
+.mobile-menu i {
+	position: absolute;
+	font-size: 33px;
+	top: 20px;
+	right: 15%;
+	cursor: pointer;
+}
